PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Fix configure working with glftpd 2.03
		- Add .log to the allowed_types by default
		- Update default allowed_years to include 2014
		- ^--- 2014 ---^
		- Change "Psychadelic" to "Psychedelic". According to ID3
		  there is no ID3 genre standard: Q5 at http://id3.org/FAQ
		  So if there's no chance for a fix of a non-existing standard,
		  I quit following it and fix what's wrong with it.
		  Any other suggestions welcome though not of the American vs British English kind.
		- Fix typo in audio-genre-script (thanks to tittof for noticing)
		- Updated psxc-imdb.sh, see it's changelog
		- Refactor SFV-parsing
		- Fixed bug where not all data was available in the cookies for
		  the complete bar when the sfv was uploaded last.
		- Changed get_rar_info methodcall in preparation for a bugfix.
		- Made comment-removal in sfvs to be separately definable.
		  Now you can have a cleanup of the sfv while still keeping
		  the sometimes valuable information and/or ascii art present
		  in the comments. A must for old mp3 releases.
		- Fix typo in README.ZSCONFIG
		- Fix psxc-imdb-find not finding any results anymore
		- Fix for segv when rescanning audiodirs without audiofiles
		- Fix find_last_of and find_first_of crashing on NULL input
		- Forgotten mp3-to-audio textchange
		- change CHANGELOG to list newest at top
		- ^--- 2013 ---^
		- Bugfix for split AUDIO_* lines when garbage is in the ID3 fields
		- Rewrote and enhanced the stripping/trimming help functions
		- Bugfix for rescan where negative missing files and over 100% completion occured
		- Some fixes for the racedata and headdata files after rescan-runs
		- Cleanup, memleakfixes and preventive buffer overflow fixes for rescan
		- Fix forgotten part of sampledir checking code to work with commas
		- Update ignored_types, removed m3u from it to allow multi-cd m3u's
		- Fix allowed_genres and banned_genres (and any other list where items have a space)